# dava.revanced

./: README.md  build_tools.py
.github/workflows/: build.yml
Docs/: ResourceEditor.md
Modules/CEFWebview/build-chromium/: automate-git.py
Programs/FontGenerator/Scripts/: charlist_generator.py
Programs/FormatEditor/: CMakeLists.txt
Programs/FormatEditor/Classes/: main.cpp
Programs/FormatEditor/DataQt/: MainWindowWidget.ui  Resources.qrc
Programs/FormatEditorCLI/: CMakeLists.txt
Programs/FormatEditorCLI/Classes/: FormatEditorCLI.cpp  FormatEditorCLI.h
Programs/Launcher/Teamcity/: createPackageInfo.py
Programs/ParticlesGod/ParticlesGodInjector/: ParticlesGodInjector.cpp  (+3 more)
Programs/ResPackerTest/: mail.py  report_utils.py  test.py  utils.py
Programs/ResourceDLC/: CMakeLists.txt
Programs/ResourceDLC/Classes/: ResourceDLC.cpp  ResourceDLC.h
Programs/ResourceDVPL/: CMakeLists.txt
Programs/SceneViewer/: CMakeLists.txt
Programs/UnitTests/: CMakeLists.txt
Programs/WinStoreCMake/: pack.py  unpack.py
RepoTools/: build_editor_with_particles_god.py  build_toolset.py
RepoTools/Codeformat/: format_all.py  git-clang-format.py
RepoTools/Scripts/: change_dava_versions.py  create_pack_file.py  create_version_h.py  dava_gen.py  delete_folder.py  fix_includes.py  pack_app.py  rm.py  unzip.py
RepoTools/Teamcity/: run_build.py  stash_api.py  team_city_api.py  update_depend_build_status.py
RepoTools/coverage/: coverage_report.py
Scripts/: build_fully_cleaned_resource_editor.py
Sources/Internal/: DAVAClassRegistrator.cpp  DAVAEngine.h
(+454 files in other folders)
